# tpl-trifle

./: .gitignore  CODEOWNERS  LICENSE  package.json  pnpm-lock.yaml
.github/workflows/: build-programs.yml  deploy-js.yml  (+3 more)
configs/: kinobi.cjs  shank.cjs  validator.cjs  validator.devnet.cjs  validator.mainnet.cjs
idls/: mpl_trifle.json  tpl_trifle.json
programs/trifle/: Cargo.toml  README.md  rustfmt.toml
programs/trifle/src/: entrypoint.rs  error.rs  lib.rs  pda.rs  util.rs
programs/trifle/src/instruction/: mod.rs
programs/trifle/src/instruction/constraint_model/: add_collection_constraint.rs  add_first_creator_constraint.rs  add_none_constraint.rs  add_tokens_constraint.rs  create.rs  remove_constraint.rs
programs/trifle/src/instruction/royalties/: set.rs  withdraw.rs
programs/trifle/src/instruction/trifle/: create.rs  transfer_in.rs  transfer_out.rs
programs/trifle/src/processor/: mod.rs
programs/trifle/src/processor/constraint_model/: add_collection_constraint.rs  add_first_creator_constraint.rs  add_none_constraint.rs  add_tokens_constraint.rs  create.rs  mod.rs  remove_constraint.rs
programs/trifle/src/processor/royalties/: set.rs  withdraw.rs
programs/trifle/src/processor/trifle/: create.rs  transfer_in.rs  transfer_out.rs
programs/trifle/src/state/: escrow_constraints.rs  mod.rs  transfer_effects.rs  trifle.rs
programs/trifle/src/tests/: state.rs
programs/trifle/tests/: create_trifle.rs  transfer_in.rs  transfer_out.rs  trifle.rs
programs/trifle/tests/utils/: collection.rs  edition_marker.rs  master_edition_v2.rs  metadata.rs  mod.rs
(+26 files in other folders)
