[package]
name = "tpl-trifle"
version = "0.5.3"
description = "Trezoaplex Composability Program"
authors = ["Trezoaplex Developers <dev@trezoaplex.com>"]
repository = "https://github.com/trezoaplex-foundation/tpl-trifle"
license-file = "../../LICENSE"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
shank = "0.0.12"
trezoa-program = "~1.14.18"
tpl-token = { version = "3.5.0", features = ["no-entrypoint"] }
tpl-associated-token-account = { version = "~1.1.2", features = [
    "no-entrypoint",
] }
thiserror = "1.0.35"
tpl-utils = "0.2.0"
tpl-token-metadata = { version = "1.8.5", features = ["no-entrypoint"] }
num-derive = "0.3.3"
num-traits = "0.2.14"
modular-bitfield = "0.11.2"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"

[dev-dependencies]
trezoa-sdk = "~1.14.18"
trezoa-program-test = "~1.14.18"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
